2006-11-25  Zack Weinberg  <zackw@panix.com>

	* pcrewrap.cc, pcrewrap.hh: New files.
	* Makefile.am: Add them to MOST_SOURCES.  Add pcrewrap.cc to
	tester_SOURCES.
	* configure.ac: Look for libpcre, not libboost-regex.
	* pch.hh: Don't include boost/regex.hpp.
	* diff_patch.cc, globish.cc, lua.cc, luaext_globish.cc
	* packet.cc, uri.cc: Update to new regex interface.
	* netsync.cc: Remove vestigial include of boost/regex.hpp
	(there are no uses of regular expressions in this file).

2006-11-20  Matt Johnston  <matt@ucc.asn.au>

	* tests/mtn_execute_attr_respects_umask/: use ls -l rather than
	stat -c, since the former is posix defined.

2006-11-20  Thomas Keller  <me@thomaskeller.biz>

       * moved automate get_file into cmd_files.cc
       * new automate command get_file_of which is basically mtn cat
       * replaced exception by user error for get_file and get_file_of
       if no arguments are given

2006-11-18  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.monotone.init (d_start): Remove the
	branch argument, which was all-inklusive anyway.
	* debian/changelog: Mark a new version to make it possible to
	write a ...
	* debian/NEWS: New news item indicating to Debian users that
	they may need to do some changes if they want their servers
	to still run.

2006-11-18  Timtohy Brownawell  <tbrownaw@gmail.com>

	Make 'serve' always serve everything, and no longer take
	include/exclude patterns on the command line.

	Make the testsuite not use --nostd, so it can use the standard
	permissions hooks for tests that need restricted serve.

	Un-xfail the mtn:execute / umask test, since not having the
	standard hooks available was what made it not work.

2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Make spawn_redirected work with blank filenames to not redirect
	some streams.

2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Add status code reporting to the note_netsync_{begin,end} hooks.
