@@ -1,3 +1,12 @@
+2006-11-27  Zack Weinberg  <zackw@panix.com>
+
+	* packet.cc (feed_packet_consumer): Convert from functor object
+	into normal static function.  Define all regular expression
+	objects statically, at file scope.  Reorganize logic slightly.
+	(extract_packets, require): Adjust to match.
+	* constants.cc: Delete legal_packet_bytes and all regex_* constants.
+	* constants.hh: Similarly.
+
 2006-11-25  Zack Weinberg  <zackw@panix.com>
 
 	* pcrewrap.cc, pcrewrap.hh: New files.
